--- a/Second.html
+++ b/Second.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Project </title>
+    <title> Reference Hub </title>
     <link rel="stylesheet" href="Second.css" />
 </head>
 <body>   
@@ -52,4 +52,5 @@
     </div>
     <script src="Second.Js"> </script>
 </body>
+
 </html>
